--- a/orders/package.json
+++ b/orders/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "posts",
+  "name": "orders",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,11 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
-    "jsonwebtoken": "^9.0.2",
+    "@nestjs/swagger": "^7.1.14",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
