--- a/auth-service/.env
+++ b/auth-service/.env
@@ -3,3 +3,6 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=db
+
+RABBITMQ_PORT=5672
+# RABBITMQ_DEFAULT_USER=admin
