--- a/auth-service/docker-compose.yaml
+++ b/auth-service/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   postgres:
@@ -7,4 +7,12 @@ services:
     env_file:
       - .env
     ports:
-      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
+      - '${POSTGRES_PORT}:${POSTGRES_PORT}'
+
+  rabbit-mq:
+    image: rabbitmq:3.12.7
+    container_name: rabbitmq
+    ports:
+      - '${RABBITMQ_PORT}:${RABBITMQ_PORT}'
+    env_file:
+      - .env
